# Multibit-Flip-Flop

./: .gitignore  .gitignore.bak  001_case1.txt  001_case1_hidden.txt  CMakeLists.txt  README.md  a.out  backup.sh  bashrc  benchmark.py  benchmark.sh  benchmark.txt  bk.py  build.sh  cargo_expand.txt  cgraphx.hpp  cgraphx_boost.hpp  combinations.hpp  conanfile.txt  connection.markdown  current.txt  draw.excalidraw  draw.tldr  exclude-list.txt  faketime  faketime_utl.py  format_converter.py  graphtool_test.py  graphx.hpp  graphx.py  graphx_cpp.hpp  graphx_rust.hpp  graphx_varia.hpp  gurobi.env  input.hpp  input.py  ll.py  main.cpp  main.py  main.py.bk  (+37 more)
1_output/: layout.html  merged_layout..html  merged_layout.html  original_layout..html  original_layout.html  output.txt
Analytical/: density_optimization_test.py  graph.py  main.py  plot.py
Mbffg/: Cargo.toml  benchmark.txt  par0  par1  pgo.sh  run.sh  run2.sh  rustc-ice-2025-09-16T13_14_57-1334214.txt  rustc-ice-2025-09-16T13_14_57-1334215.txt
Mbffg/benches/: my_benchmark.rs
Mbffg/src/: bridge_py.rs  class.rs  custom_trait.rs  file_writer.rs  geometry.rs  helper.rs  k_selector.rs  lib.rs  main.rs  mbffg.rs  mindmap.py  num_formater.rs  numpy.rs  plot.py  rtree.rs  rtree_id.rs  script.py  test.rs  util.rs  utility.py
Mbffg/src/cxx/: bridge.cpp  formatter.cpp
benchmark_speed/: Cargo.toml
benchmark_speed/benches/: index_speed.rs  lookup_speed.rs
cases/: c2.in  current.txt  error_case1.txt  error_case2.txt  error_case3.txt  new_c1.txt  new_c2.txt  new_c3.txt  new_c4.txt  output.txt  sample.txt  sample_exp.txt  sample_exp_comb.txt  sample_exp_comb2.txt  sample_exp_comb3.txt  sample_exp_comb4.txt  sample_exp_comb5.txt  sample_exp_mbit.txt  testcase0.txt  testcase1_0812.html  testcase1_0812tmp.txt  v2.txt
cases/output/: output.txt  v2o.txt
cases/sample/: sample.txt  sample_1.txt  sample_2.txt  sample_3.txt  sample_4.txt  sample_5.txt  sample_6.txt  sample_exp_comb.txt  sample_exp_comb3.txt  sample_exp_comb5.txt  sample_exp_comb6.txt  sample_exp_mbit.txt
conantest/: CMakeLists.txt  main.cpp
document/: documentation.txt  draw.excalidraw  report.md  未命名绘图.drawio
experimental_results/: benchmark.sh  benchmark.txt  hiddencase01.out  hiddencase02.out  hiddencase03.out  hiddencase04.out  testcase1_0812.out  testcase2_0812.out  testcase3.out
final_project/: input.py  main.py  main_final.py  mbffg.py  new_c1.txt  output1.html  output2.html  plot.py  temp.out  utility.py  zoom_pan.js
hello_world/: Cargo.toml  build.rs  run.sh  rustc-ice-2025-09-16T13_14_56-1334202.txt  rustc-ice-2025-09-16T13_14_56-1334203.txt  stage_MERGING  stage_detail_placement  stage_merging  stage_merging.txt  stage_timing_optimization  stage_timing_optimization.txt
hello_world/benches/: my_benchmark.rs
hello_world/easy_print/: Cargo.toml
hello_world/easy_print/src/: lib.rs
hello_world/file_save/: Cargo.toml
hello_world/file_save/src/: lib.rs
hello_world/my_macro/: Cargo.toml
hello_world/my_macro/src/: debug.rs  lib.rs  release.rs
hello_world/num_cast/: Cargo.toml
hello_world/num_cast/src/: debug.rs  lib.rs  type_info_trait.rs
hello_world/src/: KDTree.rs  bridge.rs  bridge_cxx.rs  bridge_py.rs  class.rs  comment_tool.py  custom_trait.rs  file_writer.rs  geometry.rs  graph.rs  gurobi.py  gurobi.rs  gurobitest.py  helper.rs  lib.rs  main copy.rs.bk  main.rs  mbffg.rs  mindmap.py  numeric.rs  numpy.rs  plot.py  rtree.rs  rtree_id.rs  scipy.rs  script.py  torch.rs  torch_trait.rs  type_cast.rs  type_info_trait.rs  util.rs  utility.py  utility_image_w_torch.py  utility_image_wo_torch.py
hello_world/src/cxx/: bridge.cpp  bridge.h  bridge.hpp  print.hpp
output/: output.txt  output1.html  output2.html  output3.html  output4.html
pyo3test/: Cargo.toml  main.py  pyproject.toml
pyo3test/src/: lib.rs
tools/binary001/: 001_case1.txt  001_case2.txt  001_case3.txt  001_hidden1.txt  001_hidden2.txt  001_hidden3.txt  001_hidden4.txt  1st_place_cadb0027_0312  test.sh
