[package]
name = "mbffg"
edition = "2024"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
num_cast = { path = "library/num_cast" }
file_save = { path = "library/file_save" }
vec_util = { path = "library/vec_util" }
easy_print = { path = "library/easy_print" }
rc_wrapper_macro = { path = "library/rc_wrapper_macro" }

petgraph = "0.8.3"
pyo3 = { version = "0.23.2", features = ["auto-initialize"] }
rand = "0.9.2"
rstar = "0.12.2"
geo = "0.31.0"
foldhash = "0.2.0"
bon = "3.8.1"
ordered-float = "5.1.0"
prettytable = "0.10.0"
itertools = "0.14.0"
colored = "3.0.0"
round = "0.1.2"
pareto_front = "1.0.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
logging_timer = "1.1.1"
rayon = "1.11.0"
derive-new = "0.7.0"
pretty_assertions = "1.4.1"
libc = "0.2.177"
once_cell = "1.21.3"
priority-queue = "2.7.0"
indicatif = "0.18.0"
regex = "1.12.1"
tokio = { version = "1.44.1", features = ["full"] }
indexmap = "2.11.4"
append-only-vec = "0.1.7"
tcmalloc-better = "0.1.19"
malloc-best-effort = "0.1.4"

string-interner = "0.19.0"
slotmap = "1.0.7"
hotpath = { version = "0.4", optional = true}


[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# [workspace.lints.rust]
# warnings = "deny"
