[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
# crate-type = ["cdylib"]
crate-type = ["staticlib", "cdylib"]
path = "src/main.rs"
[dependencies]
rustworkx-core = "0.14.2"
pyo3 = { version = "0.23.2", features = ["auto-initialize"] }
# pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand="0.8.5"
tqdm = "0.7.0"
rstar = "0.12.0"
geo = "0.28.0"
kiddo = "4.2.1"
dyn-clone = "1.0.17"
fxhash = "0.2.1"
foldhash = "0.1.2"
ahash = "0.8.11"
internment = "0.8.5"
bon = "2.3.0"
cached = "0.54.0"
ordered-float = "4.5.0"
prettytable = "0.10.0"
itertools = "0.13.0"
colored = "2.1.0"
inline_colorization = "0.1.6"
round = "0.1.2"