[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
# crate-type = ["cdylib"]
crate-type = ["staticlib", "cdylib"]
path = "src/main.rs"
[dependencies]
rustworkx-core = "0.14.2"
pyo3 = { version = "0.23.2", features = ["auto-initialize"] }
rand = "0.8.5"
tqdm = "0.7.0"
rstar = "0.12.0"                                                # https://crates.io/crates/rstar
geo = "0.28.0"
kiddo = "4.2.1"
dyn-clone = "1.0.17"
fxhash = "0.2.1"
foldhash = "0.1.2"
ahash = "0.8.11"
internment = "0.8.5"
bon = "2.3.0"
cached = "0.54.0"
ordered-float = "4.5.0"
prettytable = "0.10.0"
itertools = "0.13.0"
colored = "2.1.0"
inline_colorization = "0.1.6"
round = "0.1.2"
pareto_front = "1.0.1"
cxx = "1.0.135"
kmeans = "1.1.0"
ndarray = "0.16.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
logging_timer = "1.1.1"
rayon = "1.10.0"
simple-tqdm = { version = "0.2.0", features = ["rayon"] }
derive-new = "0.7.0"
derive_more = { version = "1", features = ["full"] }
typed-builder = "0.20.0"
frunk = "0.4.3"
frunk_core = "0.4.3"
num = "0.4.3"
cast = "0.3.0"
easy-cast = { version = "0.5.3", features = ["always_assert"] }
castaway = "0.2.3"
conv = "0.3.3"
funty = "2.0.0"
duplicate = "2.0.0"
[build-dependencies]
cxx-build = "1.0"
