[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
# crate-type = ["cdylib"]
# crate-type = ["staticlib", "cdylib"]
# path = "src/main.rs"

[dependencies]
rustworkx-core = "0.14.2"
pyo3 = { version = "0.23.2", features = ["auto-initialize"] }
rand = "0.8.5"
tqdm = "0.7.0"
rstar = "0.12.0"                                              # https://crates.io/crates/rstar
geo = "0.30.0"
kiddo = "5.0.3"
dyn-clone = "1.0.17"
fxhash = "0.2.1"
foldhash = "0.1.2"
ahash = "0.8.11"
# internment = "0.8.5"
bon = "3.6.4"
typed-builder = "0.21.0"
cached = "0.54.0"
ordered-float = "4.5.0"
prettytable = "0.10.0"
itertools = "0.14.0"
colored = "2.1.0"
inline_colorization = "0.1.6"
round = "0.1.2"
pareto_front = "1.0.1"
cxx = "1.0.135"
kmeans = "2.0.0"
ndarray = "0.16.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
logging_timer = "1.1.1"
rayon = "1.10.0"
simple-tqdm = { version = "0.2.0", features = ["rayon"] }
derive-new = "0.7.0"
derive_more = { version = "1", features = ["full"] }
frunk = "0.4.3"
frunk_core = "0.4.3"
num = "0.4.3"
castaway = "0.2.3"
conv = "0.3.3"
funty = "2.0.0"
duplicate = "2.0.0"
natord = "1.0.9"
num_cast = { path = "library/num_cast" }
file_save = { path = "library/file_save" }
tuple2vec = { path = "library/tuple2vec" }
vec_util = { path = "library/vec_util" }
easy_print = { path = "library/easy_print" }
rc_wrapper_macro = { path = "library/rc_wrapper_macro" }

pretty_assertions = "1.4.1"
serde = "*"
grb = { version = "3.0.1", features = ["gurobi12"] }
libc = "0.2.171"
once_cell = "1.21.3"
priority-queue = "2.1.2"
slotmap = "1.0.7"
indicatif = "0.17.11"
regex = "1.11.1"
tch = { version = "0.20.0" }
libloading = "0.8.8"
spade = "2.14.0"


[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
# codegen-units = 1
incremental = true
# strip = true
# lto = true
